@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.473 2007/02/06 14:49:13 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.474 2007/02/07 11:24:56 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -86,6 +86,10 @@ PH/19 Change 4.64/PH/36 introduced a bug: when address_retry_include_sender
       fixed.
 
 PH/20 Added hosts_avoid_pipelining to the smtp transport.
+
+PH/21 Long custom messages for fakedefer and fakereject are now split up
+      into multiline reponses in the same way that messages for "deny" and
+      other ACL rejections are.
 
 
 Exim version 4.66
